Notes and notes formatting.

--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 						<p>Google Presentation</p>
 						<img src="img/heweb10.png" />
 						<aside class="notes">
-							I'd been presenting more back at home, though, mostly in PowerPoint, which I never liked much, and several times more recently in Google Presentations, including this example reporting some of the lessons learned at HighEdWeb 2010. As you know (or should) Google's tools offer a lot of advantages for collaboration.
+							<p>I'd been presenting more back at home, though, mostly in PowerPoint, which I never liked much, and several times more recently in Google Presentations, including this example reporting some of the lessons learned at HighEdWeb 2010. As you know (or should) Google's tools offer a lot of advantages for collaboration.</p>
 
-							But as nice as this tool is in various ways, it doesn't look great. It let you use the web, but in a lowest-common-denominator sort of way. It offers some conveniences but denies others.
+							<p>But as nice as this tool is in various ways, it doesn't look great. It let you use the web, but in a lowest-common-denominator sort of way. It offers some conveniences but denies others.</p>
 						</aside>
 					</section>
 
@@ -127,9 +127,9 @@
 						<img src="img/icanconvert2.png" class="fragment" style="position:relative; top:-492px;" />
 
 						<aside class="notes">
-							In 2012 Jason Proctor and I collaborated on a talk, and because we wanted it to look nice we used Keynote. Now this time the tool really got in the way. Jason knows a lot more about typography than I do, but I know Keynote better. Our collaboration consisted of sharing some notes, and then working on a single Keynote file in a shared Dropbox folder, being careful not to overwrite each other's changes. We know each other well and we got through this ok but it was really the last straw.
+							<p>In 2012 Jason Proctor and I collaborated on a talk, and because we wanted it to look nice we used Keynote. Now this time the tool really got in the way. Jason knows a lot more about typography than I do, but I know Keynote better. Our collaboration consisted of sharing some notes, and then working on a single Keynote file in a shared Dropbox folder, being careful not to overwrite each other's changes. We know each other well and we got through this ok but it was really the last straw.</p>
 
-							I did wear jeans, though.
+							<p>I did wear jeans, though.</p>
 						</aside>
 					</section>
 				</section>
@@ -152,8 +152,7 @@
 					</section>
 
 					<section>
-						<h2>Version Control</h2>
-						<h3>What about that, huh?</h3>
+						<h2>What About Version Control?</h2>
 						<aside class="notes">
 							For a dozen years by this point I'd been managing source code in version control systems. First StarTeam, then CVS, SVN, and Git. I invested a lot of time working with these tools, and relied upon them to care for the output of the hours (and the years) I spent at the keyboard doing my main job.
 						</aside>
@@ -168,9 +167,10 @@
 
 					<section>
 						<h2>It turns out <br/>there are options.</h2>
+						<p class="fragment">
 						<aside class="notes">
-							[Lacy's talk in 2012]
-							[That's what I'm going to do next time]
+							<p>Lacy Tite of Vanderbilt University presented a talk at HighEdWeb 2012 on WordPress functions, and during the conference I heard that she was using a web-based presentation tool. After really feeling the limitations of Keynote for collaboration with another web developer that year I thought "<em>That's</em> what I'm going to do next time."</p>
+							<p>http://lacytite.com/heweb12/wordpress.html</p>
 						</aside>
 					</section>
 				</section>
@@ -212,13 +212,13 @@
 							<li>Opera Show Generator</li>
 						</ul>
 						<aside class="notes">
-							Around 2000 Opera introduced Opera Show
+							<p>Around 2000 Opera introduced Opera Show</p>
 
-							With a little CSS you could use the same XHTML for slide show, web, and printed handouts.
+							<p>With a little CSS you could use the same XHTML for slide show, web, and printed handouts.</p>
 
-							Cross-<em>platform</em>. But limited to Opera. Which you had to pay for.
+							<p>Cross-<em>platform</em>. But limited to Opera. Which you had to pay for.</p>
 
-							In 2004 Opera released Opera Show Generator to allow presentations to be built without knowledge of web development.
+							<p>In 2004 Opera released Opera Show Generator to allow presentations to be built without knowledge of web development.</p>
 						</aside>
 					</section>
 
@@ -227,9 +227,9 @@
 						<img src="img/tantek.png"
 						<p><a href="http://tantek.com/presentations/2004sxsw/css.html">http://tantek.com/presentations/2004sxsw/css.html</a></p>
 						<aside class="notes">
-							A few years later Tantek Çelik built a slide show system for his own use.
+							<p>Tantek Çelik is an important figure in Web Standards. He (and others) saw the potential of Opera Show but wanted to make this functionality more generally available. So a few years later Tantek built a slide show system for his own use.</p>
 
-							Cross-browser. JavaScript. But requires manually-assigned IDs.
+							<p>Cross-browser. JavaScript. But requires manually-assigned IDs.</p>
 						</aside>
 					</section>
 
@@ -246,9 +246,9 @@
 						</ul>
 						<p><a href="http://meyerweb.com/eric/tools/s5/">http://meyerweb.com/eric/tools/s5/</a></p>
 						<aside class="notes">
-							Eric Meyer's framework retains the things that are valuable about Tantek's, but uses JavaScript to assign IDs automatically, making things easier for the editor.
+							<p>Eric Meyer's framework retains the things that are valuable about Tantek's, but uses JavaScript to assign IDs automatically, making things easier for the editor.</p>
 
-							Still compatible with Opera Show. Also compatible with XOXO (Extensible Open XHTML Outlines microform).
+							<p>Still compatible with Opera Show. Also compatible with XOXO (Extensible Open XHTML Outlines microform).</p>
 						</aside>
 					</section>
 
@@ -367,11 +367,11 @@
 							<li class="fragment"><a href="https://github.com/nicolasiensen/reveal.js-sinatra">Generate presentations with Sinatra</a>.</li>
 						</ul>
 						<aside class="notes">
-							You can link directly from slide to slide.
+							<p>You can link directly from slide to slide.</p>
 
-							Node.js is used for remote and multiplexing, and Node and Grunt are used for Reveal.js development.
+							<p>Node.js is used for remote and multiplexing, and Node and Grunt are used for Reveal.js development.</p>
 
-							Third-party developers have experimented with novel control mechanisms, new transition types, and even programattic generation of presentations using Sinatra.
+							<p>Third-party developers have experimented with novel control mechanisms, new transition types, and even programattic generation of presentations using Sinatra.</p>
 						</aside>
 					</section>
 				</section>
@@ -388,9 +388,9 @@
 						<small><a href="https://github.com/marcolago/flowtime.js">https://github.com/marcolago/flowtime.js</a></small>
 						<small><a href="http://flowtime-js.marcolago.com/#/section-6/page-1" target="_blank">Parallax example</a></small>
 						<aside class="notes">
-							Follow example link and click through to see the parallax effect demonstrated.
+							<p>Follow example link and click through to see the parallax effect demonstrated.</p>
 
-							NOTE: In Safari be sure to leave fullscreen mode first.
+							<p>NOTE: In Safari be sure to leave fullscreen mode first.</p>
 						</aside>
 					</section>
 
@@ -399,9 +399,9 @@
 						<p><a href="http://bartaz.github.com/impress.js/" target="_blank">Impress<a></p>
 						<small><a href="https://github.com/bartaz/impress.js">https://github.com/bartaz/impress.js</a></small>
 						<aside class="notes">
-							Follow "Impress" link for a quick click-through of the Impress demo.
+							<p>Follow "Impress" link for a quick click-through of the Impress demo.</p>
 
-							NOTE: In Safari be sure to leave fullscreen mode first.
+							<p>NOTE: In Safari be sure to leave fullscreen mode first.</p>
 						</aside>
 					</section>
 
@@ -427,9 +427,9 @@
 							<li>History</li>
 						</ul>
 						<aside class="notes">
-							In general all of these tools allow you to control your presentation with the keyboard in a reasonable (and usually familiar) way, though the details vary, as they do with mouse control options.
+							<p>In general all of these tools allow you to control your presentation with the keyboard in a reasonable (and usually familiar) way, though the details vary, as they do with mouse control options.</p>
 
-							You are, however, in a browser, and the behavior of the back button is a bit different from one presentation tool to another. Test this out of it matters to you.
+							<p>You are, however, in a browser, and the behavior of the back button is a bit different from one presentation tool to another. Test this out of it matters to you.</p>
 						</aside>
 					</section>
 
@@ -442,9 +442,11 @@
 							<li>Semantics (XOXO)</li>
 						</ul>
 						<aside class="notes">
-							Look at a presentation without CSS or JavaScript.
-							Try print-previewing a presentation.
-							View the source code!
+							<ul>
+								<li>Look at a presentation without CSS or JavaScript.</li>
+								<li>Try print-previewing a presentation.</li>
+								<li>View the source code!</li>
+							</ul>
 						</aside>
 					</section>
 
@@ -493,22 +495,22 @@
 				<section>
 					<h2>This is all <em>so</em> great!</h2>
 					<ul>
-						<li>Version control? Sure!</li>
-						<li>Collaboration? Why not!</li>
+						<li class="fragment">Version control? Sure!</li>
+						<li class="fragment">Collaboration? Why not!</li>
 					</ul>
 					<aside class="notes">
-						And of course all this works in version control. It's styled with CSS. It gets its behavior from CSS and JS. It only uses the same technologies we use to do everything else.
+						<p>And of course all this works in version control. It's styled with CSS. It gets its behavior from CSS and JS. It only uses the same technologies we use to do everything else.</p>
 
-						Collaboration? Why not!
+						<p>Collaboration? Why not!</p>
 					</aside>
 				</section>
 
 				<section>
 					<h2>Would I go back?</h2>
-					<h3>to Powerpoint/Keynote?</h3>
-					<p>For delivery specifically in those formats</p>
-					<h3>to Google Presentations?</h3>
-					<p>For something small and simple</p>
+					<h3 class="fragment">to Powerpoint/Keynote?</h3>
+					<p class="fragment">For delivery specifically in those formats</p>
+					<h3 class="fragment">to Google Presentations?</h3>
+					<p class="fragment">For something small and simple</p>
 					<aside class="notes">
 						Would I go back to Powerpoint or Keynote? Sure, if I have to make something available in those formats for someone else. And I'd use Google if I had a lower bar for something small and simple. But for something I'm going to spend time on, why not do it this way? I'm not promising that it's easier to get your theme working the way you want, but you're doing it with CSS. Maybe you're already great at this. Maybe not. But either way, and
 					</aside>
