Added second Deck.js slide.

--- a/index.html
+++ b/index.html
@@ -277,6 +277,17 @@
 						<p><a href="https://github.com/imakewebthings/deck.js">https://github.com/imakewebthings/deck.js</a></p>
 						<small><a href="http://imakewebthings.github.com/deck.js/" target="_blank">Example</a></small>
 					</section>
+
+					<section>
+						<h1>Deck.js</h1>
+						<ul>
+							<li>Built with jQuery and Modernizr</li>
+							<li>Themable slide and transition styles</li>
+							<li>Simple HTML</li>
+							<li>JavaScript API</li>
+							<li>Contributed extensions</li>
+						</ul>
+					</section>
 				</section>
 
 				<!-- Reveal.js -->
@@ -334,7 +345,7 @@
 
 					<section data-transition="concave">
 						<h2>Pause</h2>
-						<aside class="notes">Hit B to pause your presentation.</aside>
+						<aside class="notes">Hit B to pause your presentation. This probably stands for "blank" but I like to think it stands for "breathe".</aside>
 					</section>
 
 					<section data-transition="concave">
@@ -356,6 +367,15 @@
 					<section data-transition="concave">
 						<h2>Multiplex</h2>
 						<p>Control presentation <em>clients</em></p>
+					</section>
+
+					<section data-transition="concave">
+						<h2>API</h2>
+						<ul>
+							<li>Read and observe presentation state</li>
+							<li>React to presentation events</li>
+							<li>Control and modify presentation</li>
+						</ul>
 					</section>
 
 					<section data-transition="concave">
