Added Riker image.

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
 					<section>
 						<h2>It turns out <br/>there are options.</h2>
-						<p class="fragment">
+						<img src="img/riker.gif" class="fragment" />
 						<aside class="notes">
 							<p>Lacy Tite of Vanderbilt University presented a talk at HighEdWeb 2012 on WordPress functions, and during the conference I heard that she was using a web-based presentation tool. After really feeling the limitations of Keynote for collaboration with another web developer that year I thought "<em>That's</em> what I'm going to do next time."</p>
 							<p>http://lacytite.com/heweb12/wordpress.html</p>
