Added images and a few notes and cleaned up the HTML.

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<h2>HighEdWeb 2008</h2>
 						<h3>Higher Ed on Rails</h3>
 						<p>Powerpoint</p>
-						<img src="img/higheredonrails.png" />
+						<img src="img/higheredonrails.png" alt="Higher Ed on Rails" />
 						<aside class="notes">
 							As it turned out I was able to go, and my proposal was accepted. I prepared my talk, Higher Ed on Rails, in Powerpoint in accordance with the ancient form. There were a lot of screenshots and a lot of bullets and maybe a few transitions, and everything worked ok.
 						</aside>
@@ -88,9 +88,9 @@
 
 					<section data-transition="none">
 						<h2>Back Home</h2>
-						<h3>HighEdWeb 2012 Report</h3>
+						<h3>HighEdWeb 2010 Report</h3>
 						<p>Google Presentation</p>
-						<img src="img/heweb10.png" />
+						<img src="img/heweb10.png" alt="HighEdWeb 2010 Report" />
 						<aside class="notes">
 							<p>I'd been presenting more back at home, though, mostly in PowerPoint, which I never liked much, and several times more recently in Google Presentations, including this example reporting some of the lessons learned at HighEdWeb 2010. As you know (or should) Google's tools offer a lot of advantages for collaboration.</p>
 
@@ -102,7 +102,7 @@
 						<h2>Back Home</h2>
 						<h3>HTML5</h3>
 						<p>Keynote</p>
-						<img src="img/html5.png" />
+						<img src="img/html5.png" alt="HTML5" />
 						<aside class="notes">
 							So when I was asked to speak about HTML5 to the Five College Libraries' Digital Environment Development and Coordinating Committee (DEDCC) I decided to try Apple's Keynote. This was definitely a better tool. It suffers from weird little limitations of its own, but it tended to snap things to where I wanted them, put options where I expected them, and generally feel less frustrating. I had fun with the talk, and it looked better than anything else I'd done.
 						</aside>
@@ -112,8 +112,8 @@
 						<h2>HighEdWeb 2011</h2>
 						<h3>Swinging with Sinatra</h3>
 						<p>Keynote</p>
-						<img src="img/sinatra.png"     class="fragment fade-out"  />
-						<img src="img/kernelpanic.png" class="fragment" style="position:relative; top:-492px;" />
+						<img src="img/sinatra.png"     class="fragment fade-out"  alt="Swinging with Sinatra" />
+						<img src="img/kernelpanic.png" class="fragment" style="position:relative; top:-492px;" alt="Kernel panic!" />
 						<aside class="notes">
 							HighEdWeb 2011 was a busy conference for me. I did too much. I volunteered for a few things (registration, band), I presented a poster, and I gave another 45-minute talk. This time I wanted to do something more dynamic and exciting, a live programming demonstration. As luck would have it it was a little more exciting than I would have liked, as my computer (yes, this very computer) let me down (core dump slide) mid stream. This proved a popular diversion, and I got to repeat it two more times. One thing I promised myself was that next time I'd deliver a talk I could present in jeans.
 						</aside>
@@ -123,8 +123,8 @@
 						<h2>HighEdWeb 2012</h2>
 						<h3>I Can Convert!</h3>
 						<p>Keynote</p>
-						<img src="img/icanconvert1.png" class="fragment fade-out"  />
-						<img src="img/icanconvert2.png" class="fragment" style="position:relative; top:-492px;" />
+						<img src="img/icanconvert1.png" class="fragment fade-out"  alt="I Can Convert" />
+						<img src="img/icanconvert2.png" class="fragment" style="position:relative; top:-492px;" alt="I Can Convert" />
 
 						<aside class="notes">
 							<p>In 2012 Jason Proctor and I collaborated on a talk, and because we wanted it to look nice we used Keynote. Now this time the tool really got in the way. Jason knows a lot more about typography than I do, but I know Keynote better. Our collaboration consisted of sharing some notes, and then working on a single Keynote file in a shared Dropbox folder, being careful not to overwrite each other's changes. We know each other well and we got through this ok but it was really the last straw.</p>
@@ -144,10 +144,14 @@
 							<li class="fragment">Cloud-based (Google)</li>
 							<li class="fragment">Flash-based (Prezi)</li>
 						</ul>
+						<img src="img/limitations.gif" class="fragment" alt="Frustrating limitations" />
 						<aside class="notes">
-							Conventional presentation tools offer cryptic and shifting interfaces and little or no collaboration functionality.
-							Google's presentation tool offers much better collaboration support but limited presentational flexibility.
-							Some people were starting to use Prezi, of course, and that was impressive the first time I saw it, but it doesn't work for everything and it has other drawbacks.
+							<strong>Elapsed time check: 8min</strong>
+							<ul>
+								<li>Conventional presentation tools offer cryptic and shifting interfaces and little or no collaboration functionality.</li>
+								<li>Google's presentation tool offers much better collaboration support but limited presentational flexibility.</li>
+								<li>Some people were starting to use Prezi, of course, and that was impressive the first time I saw it, but it doesn't work for everything and it has other drawbacks.</li>
+							</ul>
 						</aside>
 					</section>
 
@@ -165,9 +169,11 @@
 						</aside>
 					</section>
 
+
+
 					<section>
 						<h2>It turns out <br/>there are options.</h2>
-						<img src="img/riker.gif" class="fragment" />
+						<img src="img/riker.gif" class="fragment" alt="Happy realization" />
 						<aside class="notes">
 							<p>Lacy Tite of Vanderbilt University presented a talk at HighEdWeb 2012 on WordPress functions, and during the conference I heard that she was using a web-based presentation tool. After really feeling the limitations of Keynote for collaboration with another web developer that year I thought "<em>That's</em> what I'm going to do next time."</p>
 							<p>http://lacytite.com/heweb12/wordpress.html</p>
@@ -224,9 +230,10 @@
 
 					<section data-transition="fade">
 						<h2>Tantek Çelik</h2>
-						<img src="img/tantek.png"
+						<img src="img/tantek.png" alt="Tantek presentation example">
 						<p><a href="http://tantek.com/presentations/2004sxsw/css.html">http://tantek.com/presentations/2004sxsw/css.html</a></p>
 						<aside class="notes">
+							<strong>Elapsed time check: 15min</strong>
 							<p>Tantek Çelik is an important figure in Web Standards. He (and others) saw the potential of Opera Show but wanted to make this functionality more generally available. So a few years later Tantek built a slide show system for his own use.</p>
 
 							<p>Cross-browser. JavaScript. But requires manually-assigned IDs.</p>
@@ -298,6 +305,7 @@
 						<p><a href="https://github.com/hakimel/reveal.js">https://github.com/hakimel/reveal.js</a></p>
 						<small><a href="http://lab.hakim.se/reveal-js/" target="_blank">Example</a></small>
 						<aside class="notes">
+							<strong>Elapsed time check: 20min</strong>
 							Reveal.js was built by Swedish user interface developer Hakim El Hattab. It has a smaller community than Deck.js, but in my personal opinion it offers a few advantages. You're looking at it now.
 						</aside>
 					</section>
@@ -330,7 +338,7 @@
 					<section data-transition="concave">
 						<h2>Overview</h2>
 						<p>10,000-foot view of your presentation.</p>
-						<div id="showoverview" class="fragment" />
+						<div id="showoverview" class="fragment"></div>
 					</section>
 
 					<section data-transition="concave">
@@ -400,6 +408,9 @@
 				<section>
 					<section>
 						<h1>A few other options</h1>
+						<aside class="notes">
+							<strong>Elapsed time check: 27min</strong>
+						</aside>
 					</section>
 
 					<section>
@@ -416,7 +427,7 @@
 
 					<section>
 						<h2>Prezi-style effects</h2>
-						<p><a href="http://bartaz.github.com/impress.js/" target="_blank">Impress<a></p>
+						<p><a href="http://bartaz.github.com/impress.js/" target="_blank">Impress</a></p>
 						<small><a href="https://github.com/bartaz/impress.js">https://github.com/bartaz/impress.js</a></small>
 						<aside class="notes">
 							<p>Follow "Impress" link for a quick click-through of the Impress demo.</p>
@@ -437,6 +448,9 @@
 					<section>
 						<h1>Things to Look For</h1>
 						<h3>When Choosing a Platform</h3>
+						<aside class="notes">
+							<strong>Elapsed time check: 32min</strong>
+						</aside>
 					</section>
 
 					<section>
@@ -513,45 +527,53 @@
 				</section>
 
 				<section>
-					<h2>This is all <em>so</em> great!</h2>
-					<ul>
-						<li class="fragment">Version control? Sure!</li>
-						<li class="fragment">Collaboration? Why not!</li>
-					</ul>
-					<aside class="notes">
-						<p>And of course all this works in version control. It's styled with CSS. It gets its behavior from CSS and JS. It only uses the same technologies we use to do everything else.</p>
+					<section>
+						<h2>This is all <em>so</em> great!</h2>
+						<ul>
+							<li class="fragment">Version control? Sure!</li>
+							<li class="fragment">Collaboration? Why not!</li>
+						</ul>
+						<aside class="notes">
+							<strong>Elapsed time check: 37min</strong>
+							<p>And of course all this works in version control. It's styled with CSS. It gets its behavior from CSS and JS. It only uses the same technologies we use to do everything else.</p>
 
-						<p>Collaboration? Why not!</p>
-					</aside>
+							<p>Collaboration? Why not!</p>
+						</aside>
+					</section>
+
+					<section>
+						<h2>Would I go back?</h2>
+						<h3 class="fragment">to Powerpoint/Keynote?</h3>
+						<p class="fragment">For delivery specifically in those formats</p>
+						<h3 class="fragment">to Google Presentations?</h3>
+						<p class="fragment">For something small and simple</p>
+						<aside class="notes">
+							Would I go back to Powerpoint or Keynote? Sure, if I have to make something available in those formats for someone else. And I'd use Google if I had a lower bar for something small and simple. But for something I'm going to spend time on, why not do it this way? I'm not promising that it's easier to get your theme working the way you want, but you're doing it with CSS. Maybe you're already great at this. Maybe not. But either way, and
+						</aside>
+					</section>
+
+					<section>
+						<h2>Better to go forward</h2>
+						<img src="img/abbey.gif" alt="Abbey Road" />
+						<aside class="notes">
+							Best of all: your presentation design work can now help you get better with the tools of your profession, instead of drawing you away from them and making you fight with the user interface of another office suite.
+						</aside>
+					</section>
+
+					<section>
+						<img style="height: 100%" src="img/mind_pump.jpg" alt="Mind Pump">
+						<aside class="notes">
+							Get better at CSS!
+						</aside>
+					</section>
 				</section>
 
 				<section>
-					<h2>Would I go back?</h2>
-					<h3 class="fragment">to Powerpoint/Keynote?</h3>
-					<p class="fragment">For delivery specifically in those formats</p>
-					<h3 class="fragment">to Google Presentations?</h3>
-					<p class="fragment">For something small and simple</p>
+					<h2>Questions?</h2>
+					<img style="height: 100%" src="img/manatee.png" alt="Manatee">
 					<aside class="notes">
-						Would I go back to Powerpoint or Keynote? Sure, if I have to make something available in those formats for someone else. And I'd use Google if I had a lower bar for something small and simple. But for something I'm going to spend time on, why not do it this way? I'm not promising that it's easier to get your theme working the way you want, but you're doing it with CSS. Maybe you're already great at this. Maybe not. But either way, and
+						<strong>Elapsed time check: 40min</strong>
 					</aside>
-				</section>
-
-				<section>
-					<h2>Better to go forward</h2>
-					<aside class="notes">
-						Best of all: your presentation design work can now help you get better with the tools of your profession, instead of drawing you away from them and making you fight with the user interface of another office suite.
-					</aside>
-				</section>
-
-				<section>
-					<img style="height: 100%" src="img/mind_pump.jpg" alt="Mind Pump">
-					<aside class="notes">
-						Get better at CSS!
-					</aside>
-				</section>
-
-				<section>
-					<img style="height: 100%" src="img/manatee.png" alt="Mind Pump">
 				</section>
 
 				<section>
