Pre-presentation tweaks. Added presenter view screenshot.

--- a/index.html
+++ b/index.html
@@ -364,6 +364,7 @@
 					<section data-transition="concave">
 						<h2>Presenter View</h2>
 						<p>See notes along with current/next slide and timer</p>
+						<img src="img/presenterview.png" alt="Presenter view" />
 					</section>
 
 					<section data-transition="concave">
@@ -598,8 +599,8 @@
 			// Full list of configuration options available here:
 			// https://github.com/hakimel/reveal.js#configuration
 			Reveal.initialize({
-				controls: false,
-				progress: false,
+				controls: true,
+				progress: true,
 				history: true,
 				center: true,
 
