--- a/index.html
+++ b/index.html
@@ -569,6 +569,11 @@
 				</section>
 
 				<section>
+					<h2>Source Code</h2>
+					<p><a href="https://github.com/svenaas/web-presenting">https://github.com/svenaas/web-presenting</a></p>
+				</section>
+
+				<section>
 					<h2>Questions?</h2>
 					<img style="height: 100%" src="img/manatee.png" alt="Manatee">
 					<aside class="notes">
