Linked hashtag at end to twitter search.

--- a/index.html
+++ b/index.html
@@ -589,7 +589,7 @@
 						saas at mtholyoke dot edu<br/>
 						<a href="http://twitter.com/svenaas">@svenaas</a>
 					</p>
-					<p>#mpd4</p>
+					<p><a href="https://twitter.com/search/realtime?q=%23MPD4">#MPD4</a></p>
 				</section>
 
 			</div>
